# webRotas

./: .gitignore  Dockerfile  Dockerfile.osrm-init  FASTAPI_MIGRATION_PLAN.md  FASTAPI_QUICKSTART.md  FIXES_APPLIED.md  LOGGING_IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  POSTGIS_PYOSMIUM_PLAN_RETAG_PENALTY_NOT_BLOCK.md  QUICK_START_LOGGING.md  README.md  RESUMO_LOGGING.md  TODO.md  TROUBLESHOOTING.md  WARP.md  docker-compose-embed.yml  docker-compose.yml  env.example  install.ps1  osrm-preprocessing.py  osrm-preprocessing.sh  pyproject.toml  test_fastapi.py  test_httpx_fix.py
Install/: README.md  download_install.ps1  get_info.ps1  output.json  pack_release.ps1  setup.ps1
Servers/: compose.yaml
Servers/BR_Municipios_2022/: Dados
Servers/FavelasComunidades/: Dados
Servers/OSMR/: Dados  GeraIndices.bat  StartServer.bat  rota.html
Servers/OpenElevation/: Dados  baixa.bat
Servers/Osmosis/: Dockerfile  filter.bat  promptwork.bat
Servers/backend/: Dockerfile  crontab  gunicorn.sh  requirements.txt
Servers/proxy/: Dockerfile  certificate.crt  conf  fullchain.pem  private.key  privkey.pem
docs/: AVOID_ZONES_PT.md  AVOID_ZONES_QUICK_START.md  AVOID_ZONES_SETUP.md  CHANGELOG.md  FALLBACK-STRATEGY.md  IMPLEMENTATION_SUMMARY.md  OSRM_PREPROCESSING_INTEGRATION.md  PARALLEL-API-IMPLEMENTATION.md  README_AVOID_ZONES.md  REFACTORING-COMPLETE.md  REFACTORING-INDEX.md  RESUMO_IMPLEMENTACAO.md  WHY_ZONES_NOT_WORKING.md  architecture-diagrams.md  codebase-analysis.md  logs_api_guide.md  refactoring-migration-guide.md  refactoring-summary.md
docs/summaries/: CACHE_DEPRECATION.md  DEPRECATION.md  FIX_SUMMARY.md  FRONTEND_BUG_ANALYSIS.md  LOGGING.md  PORT_CONFIG_REFACTORING.md  POSTGIS_PYOSMIUM_PLAN_RETAG_BLOCK.md  async_routing_refactor.md  docker_api_integration.md  endpoint_closed_route_support.md  localhost_parametrization.md  ordered_route_optimization.md  osrm_health_check.md  osrm_http_errors_fix.md  parallel_api_timeout_delays.md  port_verification_implementation.md  public_api_matrix_fix.md  waypoint_exclusion_zone_filtering.md  zone_aware_waypoint_fix.md
logs/: README.md
old_studies/Urbanizacao/: shapeFiles.py  teste.py
oldinfo/: shapeFiles.py  startserver.bat
scripts/: osrm-init-entrypoint.sh  osrm-preprocessing.py  osrm-preprocessing.sh  preprocess-osrm.sh
src/: PolylineCache.py  main.py  server.py  shapeFiles.py  web_rotas.py  wlog.py
src/OSMR/: rota.py
src/core/: dependencies.py
src/ucli/: gera_link_desktop.bat  json_validate.py  limpa.bat  mensagens.txt  prompt_conf.bat  pyproject.toml  server_interface.py  webrota_client.py  webrotas.bat  webrotas.lnk
src/webrotas/: README.md  api_elevation.py  api_routing.py  geojson_converter.py  iterative_matrix_builder.py  lua_converter.py  main.py  project_folders.py  regions.py  rotas.py  (+10 more)
tests/: Dados  TEST_SUITE_SUMMARY.md  contorno.json  criar_cache_grs.json  exemplo_abrangencia_belem.json  exemplo_abrangencia_brasilia_distosmr.json  exemplo_abrangencia_geodesica.json  exemplo_abrangencia_goias.json  exemplo_abrangencia_joaopessoa.json  exemplo_abrangencia_osmr  exemplo_abrangencia_portoalegre.json  exemplo_abrangencia_riodejaneiro_distosmr.json  exemplo_abrangencia_rj_campos.json  exemplo_abrangencia_rj_niteroi_geodesica.json  exemplo_abrangencia_salvador.json  exemplo_abrangencia_sp_pesado.json  exemplo_contorno.json  exemplo_visita_SP_cidades_interior.json  exemplo_visita_portoalegre-belem.json  exemplo_visita_rj.json  exemplo_visita_ro  exemplo_visita_ro.json  exemplo_visita_saopaulo_cidades_interior.json  exemplo_visita_serra_rj.json  lista.txt  request.json  request_circle (Brasília-DF).json  request_circle (Brasília-DF-closed).json  request_circle (Brasília-DF-endpoint).json  request_circle (Manaus-AM).json  request_circle (Porto Alegre-RS).json  request_circle (Recife-PE).json  request_circle (Rio de Janeiro-RJ).json  request_circle (Salvador-BA).json  request_circle (Salvador-BA-Avoid).json  request_grid (Belo Horizonte-MG).json  request_grid (Belém-PA).json  request_grid (Brasília-DF).json  request_grid (Campos dos Goytacazes-RJ).json  request_grid (Curitiba-PR).json  (+47 more)
wixtoolset/: Dados
(+206 files in other folders)
