[project]
name = "webrotas"
version = "0.1.0"
description = "Kit de ferramentas para gerenciamento de rotas de veículos, para atividades de inspeção da Agência Nacional de Telecomunicações do Brasil, Anatel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.0.1",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.2.0",
    "blinker==1.8.2",
    "branca==0.8.0",
    "brotli==1.1.0",
    "certifi==2024.8.30",
    "cftime==1.6.4.post1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fastapi==0.115.6",
    "filelock==3.16.1",
    "fiona==1.10.1",
    "flask==3.0.3",
    "flask-compress==1.17",
    "flask-cors==5.0.0",
    "folium==0.18.0",
    "fonttools==4.55.0",
    "fsspec==2024.12.0",
    "geographiclib==2.0",
    "geopandas==0.14.4",
    "geopy==2.4.1",
    "gpxpy==1.6.2",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jsonify==0.5",
    "kiwisolver==1.4.7",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "netcdf4==1.7.2",
    "networkx==3.3",
    "numpy==1.26.4",
    "osmnx==1.9.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pefile==2023.2.7",
    "pillow==11.0.0",
    "polyline==2.0.2",
    "psutil==6.1.0",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2024.10",
    "pyparsing==3.2.0",
    "pyproj==3.7.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "setuptools==75.8.2",
    "shapely==2.0.6",
    "simplekml==1.3.6",
    "six==1.16.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "sympy==1.13.3",
    "torch==2.4.1",
    "torch-directml==0.2.5.dev240914",
    "torchvision==0.19.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "waitress==3.0.2",
    "werkzeug==3.1.2",
    "xarray==2024.11.0",
    "xyzservices==2024.9.0",
    "zstandard==0.23.0",
    "podman>=5.4.0.1",
    "coloredlogs>=15.0.1",
    "jsonschema>=4.23.0",
    "unidecode>=1.3.8",
]
