[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webrotas"
version = "0.93.0"
description = "Kit de ferramentas para gerenciamento de rotas de veículos, para atividades de inspeção da Agência Nacional de Telecomunicações do Brasil, Anatel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "geopandas>=0.14.4",
    "geopy>=2.4.1",
    "jsonschema>=4.23.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "polyline>=2.0.2",
    "psutil==6.1.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "unidecode>=1.3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["webrotas*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
