[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webrotas"
version = "0.0.1"
description = "Kit de ferramentas para gerenciamento de rotas de veículos, para atividades de inspeção da Agência Nacional de Telecomunicações do Brasil, Anatel."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "geopandas>=0.14.4",
    "geopy>=2.4.1",
    "numpy>=1.26.4",
    "ortools>=9.14.6206",
    "polyline>=2.0.2",
    "psutil==6.1.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "shapely>=2.0.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["webrotas*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
